--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "@openserv-labs/sdk": "^1.2.0",
-    "dotenv": "^16.4.5",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
+    "elevenlabs": "^1.56.0",
+    "fs": "^0.0.1-security",
     "ts-node": "^10.9.2",
-    "zod": "^3.22.4"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
