--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.56.0",
     "fs": "^0.0.1-security",
+    "openai": "^4.91.1",
     "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
