--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.56.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "openai": "^4.91.1",
     "ts-node": "^10.9.2",
