--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@openserv-labs/sdk": "^1.2.0",
     "axios": "^1.8.4",
+    "cloudflared": "^0.7.0",
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.56.0",
     "fluent-ffmpeg": "^2.1.3",
